--- a/css/style.css
+++ b/css/style.css
@@ -1251,6 +1251,7 @@ footer .horde-icon {
 .header-title-flag {
     font-family: 'New Rocker", system-ui;
     font-size: 2.4rem;
+    font-style: normal;
     font-weight: 400;
     color: #FFFFFF;
     text-shadow: 
